--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ b {
 }
 #home-top .card-wrapper {
   min-height: 800px;
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/home-bg2.png");
+  background-image: url("../img/home-bg2.png");
   background-position: center left;
   background-size: cover;
   border-radius: 40px;
@@ -372,16 +372,16 @@ b {
   font-weight: 300;
 }
 #cities-slider .cities-slider--city .city--new-york {
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/slider-new-york.png");
+  background-image: url("../img/slider-new-york.png");
 }
 #cities-slider .cities-slider--city .city--miami {
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/slider-miami.png");
+  background-image: url("../img/slider-miami.png");
 }
 #cities-slider .cities-slider--city .city--madrid {
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/slider-madrid.png");
+  background-image: url("../img/slider-madrid.png");
 }
 #cities-slider .cities-slider--city .city--others {
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/slider-others.png");
+  background-image: url("../img/slider-others.png");
 }
 #cities-slider .cities-footer--logo img {
   margin: 0 auto;
@@ -408,7 +408,7 @@ b {
 }
 #travel--top .travel-banner {
   min-height: 720px;
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/travel-banner.png");
+  background-image: url("../img/travel-banner.png");
   background-position: center;
   background-size: cover;
   border-radius: 50px;
@@ -623,7 +623,7 @@ b {
 }
 #services--top .services-banner {
   min-height: 520px;
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/services-bg.png");
+  background-image: url("../img/services-bg.png");
   background-position: center;
   background-size: cover;
   border-radius: 50px;
@@ -681,7 +681,7 @@ b {
 #services--mid {
   padding-top: 180px;
   padding-bottom: 40px;
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/footer-bg.png");
+  background-image: url("../img/footer-bg.png");
   background-position: center;
   background-size: cover;
 }
@@ -785,7 +785,7 @@ b {
 }
 #protection--top .protection-banner {
   min-height: 520px;
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/protection.png");
+  background-image: url("../img/protection.png");
   background-position: center;
   background-size: cover;
   border-radius: 50px;
@@ -990,7 +990,7 @@ b {
 }
 #benefits--top .benefits-banner {
   min-height: 720px;
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/benefits.png");
+  background-image: url("../img/benefits.png");
   background-position: center;
   background-size: cover;
   border-radius: 50px;
@@ -1253,7 +1253,7 @@ b {
 .footer {
   text-align: center;
   padding: 60px 0;
-  background-image: url("https://jesusquev3311.github.io/master-landing/img/footer-bg.png");
+  background-image: url("../img/footer-bg.png");
   background-position: center;
   background-size: cover;
 }
